name:                reflex-dom-datepicker
version:             0.1.0
synopsis:            A date picker UI widget for the reflex FRP platform.
description:         A date picker widget to be used with the Reflex FRP system, either for GHC/GHCJS. Example expects GHCJS.
license:             BSD3
license-file:        LICENCE
author:              Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
maintainer:          Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
copyright:           Copyright (c) 2018, Commonwealth Scientific and Industrial Research Organisation (CSIRO) ABN 41 687 119 230.
category:            FRP,Web
build-type:          Simple
cabal-version:       >=1.10

source-repository   head
  type:             git
  location:         git@github.com/qfpl/reflex-dom-datepicker.git

library
  ghc-options:       -Wall -fwarn-tabs -funbox-strict-fields

  exposed-modules:     Reflex.Dom.Widget.Input.Datepicker
                     , Reflex.Dom.Widget.Input.Datepicker.Style
                     , Reflex.Dom.Widget.Input.Datepicker.Core
                     , Reflex.Dom.Widget.Input.Datepicker.Controls
                     , Reflex.Dom.Widget.Input.Datepicker.DaySelect
                     , Reflex.Dom.Widget.Input.Datepicker.Types
                     , Reflex.Dom.Widget.Basic.SelectViews

  build-depends:       base
                     , containers
                     , ghcjs-dom
                     , jsaddle-warp
                     , lens
                     , reflex
                     , reflex-dom-core
                     , text
                     , time

  if impl(ghcjs)
    build-depends:     ghcjs-dom-jsffi

  hs-source-dirs:      src
  default-language:    Haskell2010
